# rays

./: .gitignore  CMakeLists.txt  LICENSE  README.md  flake.nix
include/: aabb.cuh  aabb.hpp  bvh.cuh  camera.cuh  camera.hpp  default_scenes.cuh  default_scenes.hpp  gui.cuh  gui.hpp  image.cuh  image.hpp  material.cuh  material.hpp  object.cuh  object.hpp  png_output.cuh  ray.cuh  render.cuh  renderer.cuh  renderer.hpp  scene.cuh  scene.hpp  sphere.cuh  texture.cuh  texture.hpp  utils.cuh  utils.hpp  vec3.cuh  vec3.hpp  window.cuh  window.hpp
src/: aabb.cu  bvh.cu  camera.cu  gui.cu  image.cu  main.cpp  main.cu  material.cu  object.cu  png_output.cu  quad.cu  renderer.cu  scene.cu  sphere.cu  texture.cu  window.cu
src/device/: material.cu  object.cu  renderer.cu
src/gui/: gui.cpp  window.cpp
src/host/: aabb.cpp  camera.cpp  image.cpp  scene.cpp
